--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "axios": "^0.21.1"
   },
   "devDependencies": {
-    "@prisma/cli": "^2.13.1"
+    "@prisma/cli": "^2.13.1",
+    "dotenv": "^8.2.0"
   },
   "scripts": {
     "fetchConferences": "node ./jobs/fetchConferences.js",
-    "fetchDivisions": "node ./jobs/fetchDivisions.js"
+    "fetchDivisions": "node ./jobs/fetchDivisions.js",
+    "fetchTeams": "node ./jobs/fetchTeams.js"
   },
   "repository": {
     "type": "git",
