--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "@prisma/client": "^2.13.1",
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "lodash": "^4.17.20"
   },
   "devDependencies": {
     "@prisma/cli": "^2.13.1",
@@ -14,7 +15,8 @@
   "scripts": {
     "fetchConferences": "node ./jobs/fetchConferences.js",
     "fetchDivisions": "node ./jobs/fetchDivisions.js",
-    "fetchTeams": "node ./jobs/fetchTeams.js"
+    "fetchTeams": "node ./jobs/fetchTeams.js",
+    "fetchGames": "node ./jobs/fetchGames"
   },
   "repository": {
     "type": "git",
