--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "fetchConferences": "node ./jobs/fetchConferences.js",
     "fetchDivisions": "node ./jobs/fetchDivisions.js",
     "fetchTeams": "node ./jobs/fetchTeams.js",
-    "fetchGames": "node ./jobs/fetchGames.js"
+    "fetchGames": "node ./jobs/fetchGames.js",
   },
   "repository": {
     "type": "git",
