Adds a script for fetching highlight meta data getGames helper

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "fetchDivisions": "node ./jobs/fetchDivisions.js",
     "fetchTeams": "node ./jobs/fetchTeams.js",
     "fetchGames": "node ./jobs/fetchGames.js",
-    "fetchHighlights": "node ./jobs/fetchHighlights.js"
+    "fetchHighlights": "node ./jobs/fetchHighlights.js",
+    "fetchHighlightMeta": "node ./jobs/fetchHighlightMeta.js"
   },
   "repository": {
     "type": "git",
