Adds a script for fetching boxscores

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "fetchTeams": "node ./jobs/fetchTeams.js",
     "fetchGames": "node ./jobs/fetchGames.js",
     "fetchHighlights": "node ./jobs/fetchHighlights.js",
-    "fetchHighlightMeta": "node ./jobs/fetchHighlightMeta.js"
+    "fetchHighlightMeta": "node ./jobs/fetchHighlightMeta.js",
+    "fetchBoxscores": "node ./jobs/fetchBoxscores.js"
   },
   "repository": {
     "type": "git",
